Fix Tabs bar not hidden by default #106

--- a/tweaks/hide-tabs-bar.css
+++ b/tweaks/hide-tabs-bar.css
@@ -4,8 +4,6 @@
 /*
   MARK: Hide tabs toolbar
 */
-@media (-moz-bool-pref: "uc.tweak.hide-tabs-bar"),
-(-moz-bool-pref: "uc.tweak.hide-tabs-bar.no-window-controls") {
   /* Only hide the tabs toolbar if one of the following sidebar extensions is
    * active: Sidebery, Tree Style Tab, or Tab Center Reborn. */
   :root:not([customizing]):has(#sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:not([hidden])),
@@ -116,9 +114,6 @@
           }
         }
       }
-    }
-  }
-}
 
 /*
   MARK: Sidebar styles
